<resources>
    <string name="app_name">SignInDemoApp</string>
    <string name="server_client_id" translatable="false">1071636679426-2uv97ohle2q838i0dpv6j4bqblgncp06.apps.googleusercontent.com</string>
    <string name="request_hints">Request Hints</string>
    <string name="request_user_credentials">Request User Credentials</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="google_sign_out">Google Sign-Out</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="credential_received">Credential</string>
    <string name="use_credential">Use it</string>
    <string name="delete_credential">Delete it</string>
    <string name="what_do_you_want_to_do_with_credential">What do you want to do with the "%1$s" Credential?</string>
</resources>
